@@ -244,7 +244,9 @@ function themeblvd_get_post_thumbnail( $size = '', $args = array() ) {
 		'location'		=> themeblvd_get_att('location'),
 		'placeholder'	=> false,
 		'frame'			=> apply_filters('themeblvd_featured_thumb_frame', false),
-		'link'			=> null // FALSE to force no link, post, or thumbnail
+		'link'			=> null, // FALSE to force no link, post, or thumbnail
+		'img_before'	=> null,
+		'img_after'		=> null
 	);
 	$args = wp_parse_args( $args, $defaults );
 
@@ -258,6 +260,14 @@ function themeblvd_get_post_thumbnail( $size = '', $args = array() ) {
 			}
 		} else {
 			$output = '';
+		}
+
+		if ( $args['img_before'] ) {
+			$output = $args['img_before'].$output;
+		}
+
+		if ( $args['img_after'] ) {
+			$output .= $args['img_after'];
 		}
 
 		return apply_filters( 'themeblvd_post_thumbnail', $output, $args, $size );
@@ -314,6 +324,15 @@ function themeblvd_get_post_thumbnail( $size = '', $args = array() ) {
 	// If no actual post thumbnail, we can work off a manually feed in attachment ID
 	if ( ! $output && $args['attachment_id'] ) {
 		$output = wp_get_attachment_image( $args['attachment_id'], $size, false, array('class' => $class) );
+	}
+
+	// Apply content before/after image, if necessary
+	if ( $args['img_before'] ) {
+		$output = $args['img_before'].$output;
+	}
+
+	if ( $args['img_after'] ) {
+		$output .= $args['img_after'];
 	}
 
 	// Wrap image in link, if necessary
